dataset1235/2025-2/1955397009/users/3283679446/executions/1107611404_1078076002.log
== RUN (2025-08-16 00:57:09)
-- CODE: 
x1 = "Ufam"
print(x1
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print(x1
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print(x1
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:21:45)
-- CODE: 
x1 = 1.23
x2 = 0

print (x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:17:30)
-- CODE: 
x1 = "Ufam"
print (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:17:04)
-- CODE: 
x1 = "Ufam
print (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:22:13)
-- CODE: 
x1 = 1.23
printt (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    printt (x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    printt (x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:17:28)
-- CODE: 
x1 = "Ufam"
print (x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:16:31)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:56:37)
-- CODE: 
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:17:56)
-- CODE: 
x1 = "Ufam"
print (x1
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print (x1
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print (x1
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:21:22)
-- CODE: 
x1 = 1.23
x2 = 0

print (X2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (X2)
           ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (X2)
           ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:00:43)
-- CODE: 
x1 = 1.23
printt(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    printt(x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    printt(x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:57:34)
-- CODE: 
x1 = "Ufam"
print(x1
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print(x1
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print(x1
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:21:41)
-- CODE: 
x1 = 1.23
x2 = 0

print (x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:59:48)
-- CODE: 
x1 = 1.23
x2 = 0
print(X2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X2)
          ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X2)
          ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:54:59)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:19:48)
-- CODE: 
x1 = "Ufam"
print (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:00:08)
-- CODE: 
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:20:32)
-- CODE: 
x1 = "Ufam"
print (x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:55:26)
-- CODE: 
x_1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:57:22)
-- CODE: 
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:16:42)
-- CODE: 
x_1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:56:18)
-- CODE: 
x1 = "Ufam
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:23:10)
-- CODE: 
x1 = 1.23
print (x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:20:41)
-- CODE: 
x1 = "Ufam"
print (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
